# aird

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
contrib/gentoo/: aird.ebuild
contrib/gentoo/init.d/: aird
etc/: aird.cfg
src/: event_device.cpp  event_device.h  event_handler.h  event_source.cpp  event_source.h  input_device.h  log.cpp  log.h  main.cpp  monitor.cpp  monitor.h  mouse_device.cpp  mouse_device.h  server.cpp  server.h  settings.cpp  settings.h
